Fixed multiple issues
  1. 'img-container' was not showing images in activity
      because it was not given proper size
  2.  enclosed 'background-image' url with single quote
      not doing so results in some images not shown in
      the background
  3.  Improved sanitize filename function to get rid of
      multiple dashes

--- a/client/stylesheets/containers/activity-holder.scss
+++ b/client/stylesheets/containers/activity-holder.scss
@@ -1,9 +1,11 @@
+@import '../colors';
+
 .activity-holder {
   font-family: 'Lato', sans-serif;
 
   > h1 {
-    color: white;
-    background-color: #5D5D5D;
+    color: $contentBlockHeaderColor;
+    background-color: $contentBlockHeaderBgColor;
     padding: 30px;
     font-size: 36px;
     font-weight: 700;
@@ -16,7 +18,7 @@
     border: 1px solid #cccccc;
   }
 
-  .activity-image-carousal {
+  .img-container {
     width: 800px;
     height: 500px;
     margin-left: auto;
